# Gloomspire

./: .gitignore  CMakeLists.txt  README.md
include/: animationHandler.h  assetManager.h  constants.h  entity.h  game.h  hero.h
src/: animationHandler.cpp  assetManager.cpp  entity.cpp  game.cpp  hero.cpp  main.cpp
